feat(streams): stream creation demo